[gd_scene load_steps=27 format=3 uid="uid://ddoaj65vavcyi"]

[ext_resource type="Texture2D" uid="uid://jsdrx4fvismw" path="res://Assets/menu/sprites/planets_nebulas_asteroids_spaceships.png" id="1_0vnnh"]
[ext_resource type="Script" path="res://Menu/heroe_seleccion.gd" id="1_lufrq"]
[ext_resource type="Texture2D" uid="uid://6yn715sx0ps6" path="res://Assets/menu/play/top.png" id="2_jnel3"]
[ext_resource type="Texture2D" uid="uid://c681kpp31htw" path="res://Assets/menu/play/exp.png" id="3_lgnwf"]
[ext_resource type="Texture2D" uid="uid://dgsonctuf25ql" path="res://Assets/menu/play/token.png" id="4_virq8"]
[ext_resource type="Texture2D" uid="uid://bvbvw28twoa3c" path="res://Assets/menu/play/arb.png" id="5_0x5q6"]
[ext_resource type="Texture2D" uid="uid://dxh4cbfcb8gx6" path="res://Assets/menu/play/avatar.png" id="6_8wvsl"]
[ext_resource type="Texture2D" uid="uid://dl6y55giotepg" path="res://Assets/menu/play/Lv.png" id="7_lg6wt"]
[ext_resource type="Texture2D" uid="uid://bi1wafo5uj7oh" path="res://Assets/menu/play/wallet.png" id="8_ktjlb"]
[ext_resource type="Texture2D" uid="uid://da3721u30w0sp" path="res://Assets/menu/play/settings.png" id="9_g7wfr"]
[ext_resource type="Texture2D" uid="uid://dnbslinq7hqmg" path="res://Assets/menu/play/Bottom.png" id="10_mkihb"]
[ext_resource type="Texture2D" uid="uid://bh4lddlbamba3" path="res://Assets/menu/play/shop.png" id="11_rl1sc"]
[ext_resource type="Texture2D" uid="uid://5n1x3n7b32e8" path="res://Assets/menu/play/deck.png" id="12_rrdi3"]
[ext_resource type="Texture2D" uid="uid://dr808ofxmfjlg" path="res://Assets/menu/play/hero.png" id="13_hknap"]
[ext_resource type="Texture2D" uid="uid://b2kk350abwth7" path="res://Assets/menu/play/social.png" id="13_qplc0"]
[ext_resource type="FontFile" uid="uid://ro2oehtjs3v" path="res://Assets/menu/play/DaysOne-Regular.ttf" id="15_n2mnx"]
[ext_resource type="Texture2D" uid="uid://cpw50pw8w15nl" path="res://Assets/menu/play/play.png" id="15_q3vhu"]
[ext_resource type="Texture2D" uid="uid://dde5db2pcv7f" path="res://Assets/menu/hero_selector/Skorn_Guide.png" id="16_nt74h"]
[ext_resource type="Texture2D" uid="uid://bc5624rn6argn" path="res://Assets/menu/hero_selector/arrow.png" id="17_4ofp2"]
[ext_resource type="Texture2D" uid="uid://dvjs703hukofv" path="res://Assets/menu/hero_selector/SELECT_bTN.png" id="19_bhm3c"]
[ext_resource type="AudioStream" uid="uid://p2gaincyh1e" path="res://Assets/menu/music/New Hope.ogg" id="20_0oq17"]
[ext_resource type="AudioStream" uid="uid://gpfch20bluwj" path="res://Assets/menu/sonidos/drum-percussion-pop-button_C_minor.wav" id="22_6ka2o"]
[ext_resource type="AudioStream" uid="uid://dk4ox2re3a65i" path="res://Assets/menu/sonidos/beep-space-button.wav" id="23_5ijfd"]

[sub_resource type="Animation" id="Animation_hv340"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Select:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(215, 1293)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Select:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_u046o"]
resource_name = "pulsar"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Select:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(228, 1293), Vector2(215, 1293)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Select:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.45, 0.45), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1qnxo"]
_data = {
"RESET": SubResource("Animation_hv340"),
"pulsar": SubResource("Animation_u046o")
}

[node name="HeroeSeleccion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_lufrq")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0vnnh")
metadata/_edit_lock_ = true

[node name="FondoTop" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 480.0
offset_bottom = 664.0
grow_horizontal = 2
scale = Vector2(0.6, 0.52)
texture = ExtResource("2_jnel3")
metadata/_edit_lock_ = true

[node name="Exp" type="Sprite2D" parent="."]
position = Vector2(121, 83)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_lgnwf")
metadata/_edit_lock_ = true

[node name="Token" type="Sprite2D" parent="."]
position = Vector2(390, 83)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_virq8")
metadata/_edit_lock_ = true

[node name="Arb" type="Sprite2D" parent="."]
position = Vector2(611, 83)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_0x5q6")
metadata/_edit_lock_ = true

[node name="Avatar" type="Sprite2D" parent="."]
position = Vector2(63, 239)
scale = Vector2(0.55, 0.55)
texture = ExtResource("6_8wvsl")
metadata/_edit_lock_ = true

[node name="Lv" type="Sprite2D" parent="."]
position = Vector2(213, 279)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_lg6wt")
metadata/_edit_lock_ = true

[node name="Wallet" type="Sprite2D" parent="."]
position = Vector2(575, 277)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_ktjlb")
metadata/_edit_lock_ = true

[node name="Settings" type="Sprite2D" parent="."]
position = Vector2(659, 209)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_g7wfr")
metadata/_edit_lock_ = true

[node name="User" type="Label" parent="."]
layout_mode = 0
offset_left = 141.0
offset_top = 172.0
offset_right = 228.0
offset_bottom = 229.0
theme_override_font_sizes/font_size = 51
text = "User"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="#Web3" type="Label" parent="."]
layout_mode = 0
offset_left = 270.0
offset_top = 172.0
offset_right = 426.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0.352941, 0.552941, 1, 1)
theme_override_font_sizes/font_size = 51
text = "#Web3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="FondotBottom" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
offset_right = 480.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_mkihb")
metadata/_edit_lock_ = true

[node name="Shop" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 1452.0
offset_right = 488.0
offset_bottom = 1922.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("11_rl1sc")
metadata/_edit_lock_ = true

[node name="Deck" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 142.0
offset_top = 1450.0
offset_right = 612.0
offset_bottom = 1920.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("12_rrdi3")
metadata/_edit_lock_ = true

[node name="Play" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 282.0
offset_top = 1430.0
offset_right = 752.0
offset_bottom = 1900.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("15_q3vhu")
metadata/_edit_lock_ = true

[node name="Hero2" type="Label" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 1554.0
offset_right = 563.0
offset_bottom = 1584.0
theme_override_fonts/font = ExtResource("15_n2mnx")
theme_override_font_sizes/font_size = 21
text = "HERO"
metadata/_edit_lock_ = true

[node name="Hero" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 467.0
offset_top = 1403.0
offset_right = 937.0
offset_bottom = 1873.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("13_hknap")
metadata/_edit_lock_ = true

[node name="Last" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 598.0
offset_top = 1447.0
offset_right = 1068.0
offset_bottom = 1917.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("13_qplc0")
metadata/_edit_lock_ = true

[node name="NaveEstadistcas" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 356.0
offset_right = 1179.0
offset_bottom = 1956.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("16_nt74h")
metadata/_edit_lock_ = true

[node name="Izquierda" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 576.0
offset_right = 172.0
offset_bottom = 1640.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("17_4ofp2")
stretch_mode = 3
metadata/_edit_lock_ = true

[node name="Derecha" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 623.0
offset_top = 576.0
offset_right = 774.0
offset_bottom = 1640.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("17_4ofp2")
stretch_mode = 3
flip_h = true
metadata/_edit_lock_ = true

[node name="Select" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 1293.0
offset_right = 784.0
offset_bottom = 1535.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("19_bhm3c")
stretch_mode = 3

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_0oq17")
volume_db = -10.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1qnxo")
}

[node name="SonidoPulsar" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_6ka2o")

[node name="SonidoSeleccionNave" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_5ijfd")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Izquierda" to="." method="_on_izquierda_pressed"]
[connection signal="pressed" from="Derecha" to="." method="_on_derecha_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
